# dubsync

./: .gitignore  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  clippy.toml  pixi.toml  prek.toml  rustfmt.toml
.github/workflows/: ci.yml  release.yml
crates/dubsync/: Cargo.toml
crates/dubsync-cli/: Cargo.toml  README.md
crates/dubsync-cli/src/: main.rs
crates/dubsync-cli/src/commands/: extract.rs  mod.rs  probe.rs
crates/dubsync-core/: Cargo.toml
crates/dubsync-core/src/: audio.rs  io.rs  lib.rs  types.rs
crates/dubsync-dsp/: Cargo.toml
crates/dubsync-dsp/src/: lib.rs  mel.rs
crates/dubsync-dsp/src/util/: alignment.rs  mod.rs  resample.rs
crates/dubsync-dsp/tests/: dsp.rs
crates/dubsync-gui/: Cargo.toml
crates/dubsync-gui/src/: app.rs  audio_loader.rs  cli.rs  main.rs  message.rs  tasks.rs  theme.rs  types.rs
crates/dubsync-gui/src/widgets/: waveform.rs
crates/dubsync-model/: Cargo.toml  README.md
crates/dubsync-model/models/: registry.json
crates/dubsync-model/src/: error.rs  lib.rs  model_manager.rs  registry.rs  types.rs
crates/dubsync-model/src/io/: crypto.rs  net.rs  paths.rs  progress.rs
crates/dubsync-model/src/provider/: huggingface.rs  mod.rs  modelscope.rs
crates/dubsync-model/tests/: model_manager.rs
crates/dubsync-stem/: .gitignore  Cargo.toml  README.md
crates/dubsync-stem/examples/: ensure_model.rs  split_one.rs
crates/dubsync-stem/src/: lib.rs  types.rs
crates/dubsync-stem/src/core/: audio.rs  dsp.rs  engine.rs  splitter.rs  stream_splitter.rs
crates/dubsync-stem/tests/: audio.rs  dsp.rs  engine.rs  splitter.rs  stream_splitter.rs
crates/dubsync/src/: main.rs
packaging/: README.md
packaging/aur/: PKGBUILD.example
packaging/homebrew/: dubsync-stem.rb
