[workspace]
resolver = "3"
members = [
    "crates/dubsync",
    "crates/dubsync-cli",
    "crates/dubsync-stem",
    "crates/dubsync-model",
    "crates/dubsync-dsp",
    "crates/dubsync-gui",
    "crates/dubsync-core",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["rubeniskov <rubeniskov@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rubeniskov/dubsync"
homepage = "https://github.com/rubeniskov/dubsync"
documentation = "https://github.com/rubeniskov/dubsync"
readme = "README.md"
keywords = ["audio", "stem", "separation", "ai", "music"]
categories = ["multimedia::audio", "science"]

[workspace.dependencies]
# Common dependencies
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }

tempfile = "3.10"
ort = { version = "=2.0.0-rc.10" } # Default features will be overridden or specified in members
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ndarray = "0.15"
reqwest = { version = "0.12", features = ["blocking"] }
rubato = "0.16"
rustfft = "6.2"
num-complex = "0.4"
rayon = "1.10"
blake3 = { version = "1.5", features = ["rayon"] }
memmap2 = "0.9"
directories = "5.0"
dubsync-stem = { path = "crates/dubsync-stem" }
dubsync-model = { path = "crates/dubsync-model" }
dubsync-dsp = { path = "crates/dubsync-dsp" }
dubsync-core = { path = "crates/dubsync-core" }

symphonia = { version = "0.5", features = ["mp3", "wav", "flac", "pcm", "mkv", "isomp4", "ogg", "vorbis"] }
lucide-icons = { version = "=1.1.0" }
