[package]
name = "dubsync-dsp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
rustfft = { workspace = true }
num-complex = { workspace = true }
once_cell = "1.19"
rayon = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
approx = "0.5.1"
