[package]
name = "dubsync-stem"
version.workspace = true
edition.workspace = true
description = "Core library for AI-powered audio stem separation"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
include = [
  "src/**",
  "models/**",
  "Cargo.toml",
  "README.md"
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dubsync-model = { workspace = true }
dubsync-dsp = { workspace = true }
hound = "3"
rubato = { workspace = true }
ndarray = { workspace = true }
anyhow = { workspace = true }
dubsync-core = { workspace = true }
symphonia = { workspace = true }
tempfile = { workspace = true }
ort = { workspace = true, features = ["download-binaries"] }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
sha2 = "0.10"
hex = "0.4"
directories = "5"
thiserror = { workspace = true }
rand = "0.8"
once_cell = "1.19"
rustfft = { workspace = true }
num-complex = { workspace = true }
approx = "0.5.1"
rayon = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
rand = "0.8"                  # to generate random test data
httpmock = "0.7"              # to simulate remote manifest/model servers
tempfile = { workspace = true } # also used in tests for isolated dirs

[features]
default = ["cuda", "coreml", "directml", "onednn"]
engine-mock = []

# GPU acceleration providers - enable all by default, code handles platform detection
# Providers that don't apply to the target platform are automatically skipped
cuda = ["ort/cuda"]           # NVIDIA GPUs (Linux, Windows)
coreml = ["ort/coreml"]       # Apple Silicon (macOS only)
directml = ["ort/directml"]   # DirectML (Windows only)
onednn = ["ort/onednn"]       # Intel optimized (all platforms)

[[bin]]
name = "dubsync-stem"
path = "src/bin/dubsync-stem.rs"
